# rusty-live-server

./: .gitignore  Cargo.toml  README.md  live.js
src/: config.rs  error.rs  main.rs
src/handlers/: api.rs  chat.rs  mod.rs  srs.rs  streaming_info.rs
src/state/: banner.rs  chat.rs  mod.rs  srs.rs  streaming_info.rs
