[package]
name = "rusty-live-server"
version = "0.1.0"
edition = "2021"
description = "Live streaming interactive server"
authors = ["rusty-live-server"]

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1.39", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Utilities
rand = "0.8"
parking_lot = "0.12"

# HTTP client for SRS API
reqwest = { version = "0.12", features = ["json"] }

# URL parsing
url = "2.5"
